css/bootstrap.css
/* ... */
/* Every page changes */
html, body, #page-content {
	background: white;
}
body {
	font-size: 13px;
}
#page-header {
	margin-bottom: -5px !important;
}
#dalton_nav {
	top: 0;
	width: 100%;
	margin: 0 10px 0 5px !important;
	overflow: visible;
}
#dalton_nav > .navbar-collapse > #topnav > linkylink > a {
	color: rgb(119, 119, 119) !important;
}
#dalton_nav > .navbar-collapse > #topnav > #dalton_nav_date > a {
	margin-top: 0 !important;
	padding-top: 0 !important;
	color: rgb(119, 119, 119) !important;
}
#page #dalton_nav ul li a:visited {
	color: rgb(119, 119, 119) !important;
}
#dalton_nav ul div.sub {
	background: white !important;
}
#dalton_nav > .navbar-collapse > #topnav > #dalton_nav_date > a:hover {
	text-shadow: none;
}
.logininfo {
	position: relative;
	top: -999px;
	/*text-transform: lowercase;*/
}
.logininfo > a{
	position: relative;
	top: 999px;
	bottom: 0;
	left: 0;
	right: 0;
}
.logininfo > a:nth-of-type(1) {
	font-weight: bold;
	font-size: 1.3em;
}
#page-footer > .logininfo {
	display: none;
}
.region-content > h1 {
	display: none;
}
.btn {
	background: rgb(66, 139, 202) !important;
	color: rgb(255, 255, 255) !important;
	border-color: rgb(53, 126, 189) !important;
	text-shadow: none !important;
}
.mform fieldset {
	border: none !important;
}
/* This hides the breadcrumbs bar
It has to be disabled because it hides the customize button.
.navbar.clearfix {
	display: none;
}*/
.navbar {
	font-size: 12px;
}
.navbar.clearfix {
	min-height: 45px;
	height: 45px;
}
.navbar.clearfix > .navbutton > .singlebutton > form > div > .btn {
	padding: 5px 10px 6px;
	width: 180px;
	height: 30px;
}
.navbar .breadcrumb {
	padding-bottom: 0;
	margin-bottom: 0;
}
/* Not logged in homepage changes */
#home-feature {
	width: 101%;
	height: 248px !important;
}

ul.home-subfeature li.icon {
	height: 70px;
}
/* Homepage changes */
.coursename {
	font-size: 14px;
}
#frontpage-course-list > h2 {
	visibility: hidden;
	display: none;
}
.block .calendar-controls .current {
	font-size: 14px;
}
.paging.paging-morelink {
	display: none;
}
.coursebox .content .summary {
	display: none;
}
/* Calendar changes */
.calendarmonth.calendartable > thead > tr > .header {
	padding-top: 3px;
	padding-bottom: 3px;
}
.calendarmonth.calendartable > tbody > tr > td > div.day {
	font-size: 14px;
}
.calendar-controls > .current {
	font-size: 25px;
}
.minicalendar.calendartable > caption > h3 {
	font-size: 14px;
}
table.calendarmonth .calendar_event_user, table.calendarmonth .calendar_event_course {
	border-radius: 0px !important;
}
/* Hovercard thing for calendar */
.yui3-widget-hd > .eventtitle {
	font-size: 14px;
}
/* Month view fixes*/
.path-calendar .maincalendar .header {
	padding-left: 1px;
	padding-right: 1px;
}
/* Day view fixes */
.path-calendar .maincalendar .eventlist .event > tbody > tr > .picture {
	padding: 10px 0px 10px 10px;
}
.path-calendar .maincalendar .eventlist .event > tbody > tr > .picture > img {
	width: 20px;
	height: 20px;
}
.path-calendar .maincalendar .eventlist .event > tbody > tr > .topic {
	padding: 10px;
}
.path-calendar .maincalendar .eventlist .event > tbody > tr > .description {
	padding-left: 10px;
	padding-right: 20px;
}
.path-calendar .maincalendar .calendar-controls .current {
	font-size: 16px;
}
/* Lightbox fixes */
#overlay {
	z-index: 9998;
	width: 100% !important;
	height: 100% !important;
}
#lightbox {
	z-index: 9999;
}
/* Label MathJax fixes */
.label {
	color: black !important;
}
/* Weird squished icons */
a > img.icon {
	width: inherit;
}
/* Survey fixes */
.path-mod-survey .surveytable td {
	text-align: center;
}
/* Message fixes */
.message .messagearea .messagehistory .notification { 
	margin-right: 22px;
}
/* Teacher view */
.iconsmall {
	width: 16px !important;
	height: 16px !important;
}

